--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,42 @@
 <div class="p-3">
   <div class="card">
     <div class="card-body">
-      <h3>Products Component</h3>
-    </div>
+      <div class="card-body">
+        <!--FormsModule => un formulaire simple sans validation-->
+        <!--{{keyword}}-->
+        <input class="p-1" type="text" [(ngModel)]="keyword" >
+        <button (click)="searchProducts()" class="btn btn-outline-success ms-1">
+          <i class="bi bi-search"></i>
+        </button>
+      </div>
+      <table class="table">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Checked</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--quand vous avez un observabel vous ajouter =>products$ | async => automatiwuement votre front-end il fait un subscribe--->
+        <!--<tr *ngFor="let product of products$ | async">-->
+        <tr *ngFor="let product of products">
+          <td>{{product.name}}</td>
+          <td>{{product.price}}</td>
+          <td>
+            <button (click)="handleCheckProduct(product)" class="btn btn-outline-success">
+              <i [class]="product.checked?'bi bi-check':'bi bi-circle'"></i>
+            </button>
+          </td>
+          <td>
+            <button (click)="handleDelete(product)" class="btn btn-outline-danger">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
   </div>
+</div>
 </div>
