--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -33,10 +33,25 @@
               <i class="bi bi-trash"></i>
             </button>
           </td>
+          <td>
+            <button (click)="handleEdit(product)" class="btn btn-outline-success">
+              <i class="bi bi-pencil"></i>
+            </button>
+          </td>
         </tr>
       </tbody>
     </table>
-
-  </div>
+      <ul class="nav nav-pills">
+        <li *ngFor="let page of [].constructor(this.totalPages);let i =index">
+          <!--[ngClass]="currentPage==(i+1)?'btn btn-success m-1':'btn btn-outline-success m-1'"-->
+          <!--[class.btn-success]="currentPage==(i+1)" class="btn m-1"-->
+          <button (click)="handleGoToPage(i+1)"
+            [ngClass]="currentPage==(i+1)?'btn-success':'btn-outline-success'"
+            class="btn m-1">
+          {{(i+1)}}
+          </button>
+        </li>
+      </ul>
+</div>
 </div>
 </div>
