--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="p-3">
+<nav class="p-3 navbar">
   <ul class="nav nav-pills">
     <li *ngFor="let action of actions">
       <button
@@ -20,4 +20,18 @@
         role="status"></div>
     </li>
   </ul>
+  <ul class="nav nav-pills">
+    <li *ngIf="appState.authState.isAuthenticated">
+      <span class="p-1 m-1" >{{appState.authState.username}}</span>
+      <button (click)="logout()" class="btn  btn-outline-success">
+        <i class="bi bi-door-closed-fill"></i>
+      </button>
+    </li>
+    <li *ngIf="!appState.authState.isAuthenticated">
+      <button (click)="login()" class="btn  btn-outline-success">
+        <i class="bi bi-door-open-fill"></i>
+      </button>
+    </li>
+  </ul>
+
 </nav>
